iidm changes