@@ -1,5 +1,7 @@
 package eu.egm.data.cnm.common;
 
+import java.util.Collections;
+import java.util.LinkedHashMap;
 import java.util.Map;
 
 /**
@@ -9,6 +11,12 @@ public record DynamicTableRow(
         String rowId,
         Map<String, Object> values) {
     public DynamicTableRow {
-        values = values == null ? Map.of() : Map.copyOf(values);
+        values = values == null ? Map.of() : nullSafeCopy(values);
+    }
+
+    private static Map<String, Object> nullSafeCopy(Map<String, Object> source) {
+        Map<String, Object> copy = new LinkedHashMap<>();
+        source.forEach((key, value) -> copy.put(key == null ? "" : key, value == null ? "" : value));
+        return Collections.unmodifiableMap(copy);
     }
 }
